--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    background-color:whitesmoke;
+  }
+
+
 h1{
     text-align: center;
+    
 }
+
+
+
